--- a/src/tdc/QABundle/Resources/views/Default/layout.html.twig
+++ b/src/tdc/QABundle/Resources/views/Default/layout.html.twig
@@ -19,7 +19,7 @@
     {{ parent() }}
     {% stylesheets  
      debug=false
-    '@tdcQABundle/Resources/public/css/qa.css' 
+    'public/css/TDC1/qa.css' 
     "@tdcQABundle/Resources/public/js/syntaxhighlighter_3.0.83/styles/shCore.css"
     "@tdcQABundle/Resources/public/js/syntaxhighlighter_3.0.83/styles/shThemeDefault.css"
     %}
