--- a/src/tdc/QABundle/Resources/views/Default/layout.html.twig
+++ b/src/tdc/QABundle/Resources/views/Default/layout.html.twig
@@ -33,7 +33,8 @@
         {%block body %}{% endblock %}
     </div>
     <div id="sidebarArea">
-    {% block sidebar%}{% endblock sidebar %}
+    {% block sidebar%}
+    {% endblock sidebar %}
     </div>
 </div>
 {% endblock contentArea %}
