--- a/web/public/css/TDC1/main.css
+++ b/web/public/css/TDC1/main.css
@@ -137,7 +137,7 @@ body
     box-shadow: 2px 0px 5px 0px rgb(50,50,50);
 }
 #navBarPost {
-    width:75px;
+    width:64px;
     border-radius: 10px 0px 0px 0px;
     box-shadow: -2px 0px 5px 0px rgb(50,50,50);
 }
@@ -159,11 +159,8 @@ body
     border-right: 1px solid rgb(249, 235, 210);
     border-left: 1px solid rgb(159, 108, 20);
 }
-#home_btn {
-}
 #about_btn {
     border-right-width:0px;
-    width:131px;
 }
 #about_btn:hover {
     border-right:0px solid;
@@ -176,13 +173,13 @@ body
 #faq_mrkr, #about_mrkr,
 #qa_mrkr {
     height:3px;
-    width:137px;
+    width:142px;
     display:inline-block;
     vertical-align:top
 }
 .currentMenuMarker {
     background-color: orange;
-    padding-left:5px;
+    width:141px !important;
 }
 .menuMarker {
     background-color: rgb(0,102,255);
@@ -296,6 +293,8 @@ body
     background-color: rgba(89, 89, 89, 0.45);
     padding: 5px 0px;
     outline: none;
+    box-shadow: 0px 4px 10px 0px rgb(50,50,50);
+    border-radius: 0px 10px 10px 0px;
 }
 .footerBlurbTitle,
 .contentBlurbTitle {
@@ -388,6 +387,10 @@ li {
     list-style-image:url('../../public/images/TDC1/liIcon.png');
     list-style:none;
     margin:4px 2px;
+}
+a, a:visited {
+    color: rgb(0,102,255);
+    text-decoration:none;
 }
 input[type='text'],
 input[type='email'],
