--- a/src/tdc/FrontEndBundle/Resources/views/Default/item.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/item.html.twig
@@ -1,4 +1,4 @@
-{% extends 'tdcFrontEndBundle:Default:index.html.twig' %}
+{% extends 'tdcFrontEndBundle:Default:layout.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
