--- a/web/public/css/TDC1/frontEnd.css
+++ b/web/public/css/TDC1/frontEnd.css
@@ -11,18 +11,20 @@
     display:inline-block;
     width:445px;
     height:250px;
-    background-color: rgb(190,190,190);
+    background-color: rgba(250,250,250,0.5);
     padding:10px;
+    border-radius:8px;
 }
 #quote_hldr {
     float:left;
     margin-right:10px;
+    font-family:cursive;
+    font-style:italic;
 }
 #quotePicture_hldr{
     float:left;
     width:150px;
     height:250px;
-    background-color:rgb(170,170,170);
     margin-right:5px;
 }
 #quotePicture_hldr img { 
@@ -30,5 +32,8 @@
     height:200px;
 }
 #quoteSignature_hldr {
-    text-align:center;
+    text-align:right;
+    font-family:cursive;
+    font-style:italic;
+    font-size:1.2em;
 }
